--- a/PhotosApp/Views/Shared/_LoginPartial.cshtml
+++ b/PhotosApp/Views/Shared/_LoginPartial.cshtml
@@ -1,28 +1,30 @@
-@using Microsoft.AspNetCore.Identity
-@using PhotosApp.Areas.Identity.Data
-
-@inject SignInManager<PhotosAppUser> SignInManager
-@inject UserManager<PhotosAppUser> UserManager
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Http.Extensions
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Photos", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+    @if (User.Identity.IsAuthenticated)
+    {
+        <li class="nav-item">
+            <span class="nav-link text-dark">Hello @User.FindFirstValue(ClaimTypes.Email)!</span>
+        </li>
+        <li class="nav-item">
+            <form id="logoutForm" class="form-inline"
+                  asp-controller="Passport"
+                  asp-action="Logout">
+                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <form id="loginForm" class="form-inline"
+                  asp-controller="Passport"
+                  asp-action="Login"
+                  asp-route-returnUrl="@Context.Request.GetEncodedPathAndQuery()">
+                <input id="rememberMe" name="rememberMe" type="hidden" value="true" />
+                <button id="login" type="submit" class="nav-link btn btn-link text-dark">Login</button>
+            </form>
+        </li>
+    }
 </ul>
